# No-Turning-Back

./: .gitattributes  .gitignore  CMakeLists.txt  OPTIMIZACION.txt  README.md  ejemplo.txt  save.json  vcpkg.json
assets/: license.txt
assets/models/Obstacles/: roadSign.glb
assets/models/Teto/: Teto.glb
assets/models/alien/: alien.glb
assets/models/citybus/: license.txt
assets/models/player/: license.txt  scene.gltf
assets/models/run_forrest/: license.txt  scene.gltf
assets/models/thug/: tung.glb
assets/shaders/: background.frag  background.vert  background_fog.frag  background_plain.frag  blur.frag  blur.vert  menu.frag  menu.vert  shader.frag  shader.vert  skybox.frag  skybox.vert
include/: AudioManager.h  CharacterState.h  Coin.h  Game.h  GameObject.h  LevelGenerator.h  Menu.h  Model.h  ObstacleOverhead.h  Player.h  RampTrain.h  States.h  Train.h
src/: AudioManager.cpp  Coin.cpp  Game.cpp  Game.h  GameObject.cpp  LevelGenerator.cpp  Main.cpp  Menu.cpp  Model.cpp  ObstacleOverhead.cpp  Player.cpp  Player.h  RampTrain.cpp  RunnerMain.cpp  States.cpp  Train.cpp  colaborador.txt  main.cpp
